--- a/frontend/app/src/components/header/Navbar.astro
+++ b/frontend/app/src/components/header/Navbar.astro
@@ -1,8 +1,7 @@
 ---
-import { $user } from "../../stores/userStore";
+const isAuthenticated = Astro.cookies.has("__session");
 
-const userState = $user.get();
-const user = userState?.data;
+const user = Astro.locals.user;
 ---
 
 <header
@@ -19,39 +18,40 @@ const user = userState?.data;
       <li><a href="/">Home</a></li>
       <li><a href="/services">Spaces</a></li>
       <li><a href="/contact">Contact Us</a></li>
-      <div>
-        {
-          user ? (
-            <>
-              <li>
-                <a href="/profile">Profile</a>
-                <span>Hi, {user.email}</span>
-              </li>
-              <li>
-                <button id="logout-btn">
-                  <a href="/logout">Logout</a>
-                </button>
-              </li>
-            </>
-          ) : (
-            <li>
-              <a href="/login">Login/Register</a>
-            </li>
-          )
-        }
-      </div>
+      {
+        user && (
+          <li>
+            <a href="/profile">Hi, {user.name.split(" ")[0]}</a>
+          </li>
+        )
+      }
+
+      {
+        isAuthenticated ? (
+          <li>
+            <button id="logout-btn">
+              <a href="/logout">Logout</a>
+            </button>
+          </li>
+        ) : (
+          <li>
+            <a href="/login">Login/Register</a>
+          </li>
+        )
+      }
     </ul>
   </nav>
 </header>
 
 <script>
   import { logOut } from "/src/services/auth/auth.client";
+  import { $user } from "/src/stores/userStore";
 
   const logoutBtn = document.getElementById("logout-btn");
 
   logoutBtn?.addEventListener("click", async () => {
     await logOut();
     window.location.href = "/login";
-    //$user.set({ data: null });
+    $user.set({ isLoading: false, data: null });
   });
 </script>
