--- a/frontend/app/src/layouts/Layout.astro
+++ b/frontend/app/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
   </head>
   <body class="relative overflow-y-hidden">
     <Navbar />
-    <div class="mt-6 h-full overflow-y-auto">
+    <div class="h-full overflow-y-auto">
       <slot />
     </div>
     <Dialog id="confirmation-dialog" />
