--- a/frontend/app/src/components/auth/Login.astro
+++ b/frontend/app/src/components/auth/Login.astro
@@ -126,10 +126,20 @@ justify-center">
     data?: { user: User; token: string } | null;
   }) => {
     const { success, message, data } = response;
+
     if (success && data) {
-      const response = await getSessionCookies(data.token);
-      if (response.redirected) {
-        window.location.assign(response.url);
+      const { uid, displayName, email } = data.user;
+      window.sessionStorage.setItem(
+        "user",
+        JSON.stringify({ uid, displayName, email })
+      );
+
+      const { status } = await getSessionCookies(data.token);
+      if (status === 200) {
+        const urlParams = new URLSearchParams(window.location.search);
+        window.location.assign(urlParams.get("redirect") || "/");
+      } else {
+        errorMessage.textContent = "Something went wrong. Please try again.";
       }
     } else {
       errorMessage.textContent = message;
