feat: add Contact and Footer component and integrate it into the main layout

--- a/frontend/app/src/components/Welcome.astro
+++ b/frontend/app/src/components/Welcome.astro
@@ -1,7 +1,18 @@
+---
+import { Icon } from "astro-icon/components";
+---
+
 <div id="hero" class="bg-cover bg-center w-full h-screen rounded-b-2xl">
-  <div class="h-full text-white bg-black/60 gap-10 text-center flex flex-col justify-center">
-    <h1 class="text-8xl font-bold px-10">Work Space</h1>
-    <p class="text-4xl font-semibold px-10">Find Your Next Coworking Space</p>
+  <div
+    class="h-full text-white bg-black/60 gap-10 text-center flex flex-col justify-center"
+  >
+    <div class="flex flex-col items-center">
+      <Icon name="workspace" size={90} class="mx-auto items-center" />
+      <h1 class="text-8xl font-bold px-10">Work Space</h1>
+    </div>
+    <p class="text-4xl font-semibold px-10 italic">
+      Find Your Next Coworking Space
+    </p>
   </div>
 </div>
 
