--- a/frontend/app/src/layouts/Layout.astro
+++ b/frontend/app/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navbar from "../components/header/Navbar.astro";
+import Footer from "../components/footer/Footer.astro";
 import Dialog from "../components/Dialog.astro";
 interface Props {
   title?: string;
@@ -21,6 +22,7 @@ const { title } = Astro.props;
     <Navbar />
     <div class="h-full overflow-y-auto">
       <slot />
+      <Footer />
     </div>
     <Dialog id="confirmation-dialog" />
   </body>
