--- a/frontend/app/src/components/header/Navbar.astro
+++ b/frontend/app/src/components/header/Navbar.astro
@@ -40,7 +40,7 @@ import { Icon } from "astro-icon/components";
           <a href="#spaces" class="transition">Spaces</a>
         </li>
         <li>
-          <a href="#contact" class="transition">Contact Us</a>
+          <a href="#why-us" class="transition">Contact Us</a>
         </li>
         {
           user ? (
@@ -68,10 +68,10 @@ import { Icon } from "astro-icon/components";
     <ul class="flex flex-col gap-4">
       <li><a href="/" class="hover:text-primary transition">Home</a></li>
       <li>
-        <a href="#product-list" class="hover:text-primary transition">Spaces</a>
+        <a href="#spaces" class="hover:text-primary transition">Spaces</a>
       </li>
       <li>
-        <a href="/contact" class="hover:text-primary transition">Contact Us</a>
+        <a href="#why-us" class="hover:text-primary transition">Why Us</a>
       </li>
       {
         user ? (
