--- a/frontend/app/src/pages/index.astro
+++ b/frontend/app/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import ProductList from "../components/products/ProductList.astro";
-import Contact from "../components/Contact.astro";
+import WhyUs from "../components/WhyUs.astro";
 ---
 
 <Layout>
@@ -10,7 +10,7 @@ import Contact from "../components/Contact.astro";
   <section id="spaces">
     <ProductList />
   </section>
-  <section id="contact">
-    <Contact />
+  <section id="why-us">
+    <WhyUs />
   </section>
 </Layout>
