--- a/frontend/app/src/components/WhyUs.astro
+++ b/frontend/app/src/components/WhyUs.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <!-- Why us section  and direction of our spaces -->
-<section class="py-16 px-8">
+<section id="why-us" class="py-16 px-8">
   <div id="benefits" class="p-8">
     <h2 class="text-3xl font-bold mb-6 text-primary leading-tight">Why Us</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
