--- a/frontend/app/src/components/auth/Register.astro
+++ b/frontend/app/src/components/auth/Register.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<div class="text-white flex-1 h-3/5 lg:h-full p-8
+<div class="text-white flex-1 h-3/5 lg:h-full py-6 px-8
 justify-center">
   <h2 class="text-2xl font-bold text-center">Create Account</h2>
   <form>
