--- a/frontend/app/src/pages/index.astro
+++ b/frontend/app/src/pages/index.astro
@@ -7,10 +7,8 @@ import WhyUs from "../components/WhyUs.astro";
 
 <Layout>
   <Welcome />
-  <section id="spaces">
+  <section id="spaces" class="pt-16 px-8">
     <ProductList />
   </section>
-  <section id="why-us">
-    <WhyUs />
-  </section>
+  <WhyUs />
 </Layout>
