--- a/frontend/app/src/components/products/ProductDetail.astro
+++ b/frontend/app/src/components/products/ProductDetail.astro
@@ -8,8 +8,8 @@ const { id, title, address, capacity, price, image, details } =
 
 <section class="grid grid-cols-1 md:grid-cols-2 gap-6 p-6 max-w-6xl mx-auto">
   <!-- Imagen -->
-  <div>
-    <img src={image} alt={title} class="rounded-xl shadow-md" />
+  <div class="flex max-h-90">
+    <img src={image} alt={title} class="rounded-xl shadow-md object-cover" />
   </div>
 
   <!-- Info -->
