--- a/frontend/app/src/components/reservation/ReservationForm.astro
+++ b/frontend/app/src/components/reservation/ReservationForm.astro
@@ -104,6 +104,7 @@ const user = Astro.locals.user;
   } from "/src/models/reservation.ts";
   import * as z from "zod";
   import * as dialog from "/src/utils/dialog.ts";
+  import { getReservationDate } from "/src/utils/date.ts";
 
   const dialogId = "confirmation-dialog";
   const time = document.getElementById("time") as HTMLInputElement;
@@ -119,22 +120,13 @@ const user = Astro.locals.user;
     startDate = start;
     endDate = end;
     if (time && day) {
-      const timeStart = new Date(start).toLocaleTimeString("es-ES", {
-        hour: "2-digit",
-        minute: "2-digit",
-        hour12: true,
-      });
-      const timeEnd = new Date(end).toLocaleTimeString("es-ES", {
-        hour: "2-digit",
-        minute: "2-digit",
-        hour12: true,
-      });
+      const {
+        day: timeDay,
+        timeStart,
+        timeEnd,
+      } = getReservationDate(start, end);
       time.textContent = `${timeStart} - ${timeEnd}`;
-      day.textContent = new Date(start).toLocaleDateString("en-US", {
-        month: "short",
-        day: "numeric",
-        year: "numeric",
-      });
+      day.textContent = timeDay;
     }
   });
 
@@ -166,6 +158,7 @@ const user = Astro.locals.user;
         title: formData.get("title") as string,
         start: startDate,
         end: endDate,
+        timezone: (new Date().getTimezoneOffset() / 60) * -1,
         userId,
         productId: form.dataset.productId as string,
         status: "active",
